load db from dummy api